--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,69 @@
+*, *::before, *::after {
+ box-sizing: border-box;
+}
+
 body {
-  background-color: #dadada;
-  font-size: 10px;
+ background-color: #dadada;
+ font-size: 10px;
+}
+
+h1 {
+ margin: 25px;
+}
+
+.container {
+ font-family: sans-serif;
+ font-size: 16px;
+ text-transform: uppercase;
+ margin: 45px auto;
+ text-align: center;
+}
+
+.baku, .madrid, .london, .rome {
+ background-color: #ffffff;
+ float: left;
+ font-family: Times New Roman;
+ font-size: 20px;
+ text-transform: capitalize;
+ text-align: left;
+ width: 100%;
+ height: 200px;
+}
+
+.baku {
+ background-image: url("../images/baku.jpg");
+ background-size: cover;
+ margin-bottom: 5%;
+}
+
+.madrid {
+ background-image: url("../images/madrid.jpg");
+ background-size: cover;
+ margin-bottom: 5%;
+}
+
+.london {
+ background-image: url("../images/london.png");
+ background-size: cover;
+ margin-bottom: 5%;
+}
+
+.rome {
+ background-image: url("../images/rome.jpg");
+ background-size: cover;
+ margin-bottom: 5%;
+}
+
+@media screen and (min-width: 575px){
+ .preview {
+   margin: 1%;
+   width: 48%;
+ }
+}
+
+@media screen and (min-width: 991px){
+ .preview {
+   margin: 1%;
+   width: 22%
+ }
 }
